# libSQL-Cpp

./: CMakeLists.txt  README.md  vcpkg.json
include/libsql/: database.h
include/libsql/core/: plugin_main.h
include/libsql/manager/: connection_manager.h  query_manager.h  table_manager.h
include/libsql/model/: query_result.h
src/: database.cpp
src/core/: plugin_main.cpp
src/manager/: connection_manager.cpp  query_manager.cpp  table_manager.cpp
src/model/: query_result.cpp
